# neuro-blastoma

./: .gitignore  README.md  pyproject.toml
images/photoshop/: 01_example-image.psd  02_example-image_difficult.psd
neuro_blastoma/: count_colors.py
notebooks/: 01_exploration.ipynb  02_array_of_pictures.ipynb  03_color_clusters.ipynb  exploration.ipynb
src/: count_color_clusters.py  count_colors.py
