[tool.poetry]
name = "neuro-blastoma"
version = "0.1.0"
description = ""
authors = ["Daniel Burger <public@danielburger.online>"]
readme = "README.md"
packages = [{include = "neuro_blastoma"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
