[tool.poetry]
name = "neuro-blastoma"
version = "0.1.0"
description = ""
authors = ["Daniel Burger <public@danielburger.online>"]
readme = "README.md"
packages = [{include = "neuro_blastoma"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pyppeteer = "^1.0.2"
nbconvert = "^7.6.0"
notebook = "^6.5.4"
ipykernel = "^6.24.0"
matplotlib = "^3.7.1"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
